snl_compiler/tests/fixtures/syntax_errors/missing_dot.snl
{错误6: 程序结束缺少 .}
program p
var
    integer x;
begin
    read(x)
end
